# azure-openai-hackathon

./: .gitignore  Readme.md  pyproject.toml  send_message.py
backend/: app.py  oai.py  pyproject.toml  send_conv.py
backend/sample_text/: sample.txt  sample_short.txt
backend/templates/: index.html
